# Py-DAW

./: .gitignore  BRIEF_AN_KOLLEGEN.md  CHANGELOG.md  CHANGELOG_v0.0.19.7.15.md  CHANGELOG_v0.0.19.7.16.md  CHANGELOG_v0.0.19.7.17_HOTFIX.md  CHANGELOG_v0.0.19.7.18_FILE_BROWSER_FIX.md  CHANGELOG_v0.0.19.7.19_CONTEXT_MENU.md  CHANGELOG_v0.0.19.7.20_MOUSEWHEEL.md  CHANGELOG_v0.0.19.7.21_MIDI_COPY_FIX.md  CHANGELOG_v0.0.19.7.22_DOUBLE_CLICK.md  CHANGELOG_v0.0.19.7.49_AUDIO_EVENT_EDITOR.md  CHANGELOG_v0.0.19.7.50_AUDIO_EVENTS_PHASE2.md  CHANGELOG_v0.0.19.7.51_AUDIO_EVENTS_PHASE2_1_GROUP_MOVE.md  CHANGELOG_v0.0.19.7.55_SAMPLER_DEVICE_REFACTOR.md  CHANGELOG_v0.0.19.7.56_AUDIO_EDITOR_CUTDRAG_LIVE_SWAP.md  CHANGELOG_v0.0.20.0.md  CHANGELOG_v0.0.20.131_BITWIG_STYLE_PROJECT_SAVE.md  CHANGELOG_v0.0.20.133_AUDIO_EDITOR_PRO.md  CHANGELOG_v0.0.20.134_PENCIL_REVERSE_STRETCH.md  CHANGELOG_v0.0.20.13_HYBRID_ENGINE.md  CHANGELOG_v0.0.20.149_CLIP_LAUNCHER_BITWIG_GRID.md  CHANGELOG_v0.0.20.14_HYBRID_PHASE2.md  CHANGELOG_v0.0.20.150_CLIP_LAUNCHER_PLAY_STATE.md  CHANGELOG_v0.0.20.151_CLIP_LAUNCHER_QUEUED_STATE.md  CHANGELOG_v0.0.20.152_CLIP_LAUNCHER_QUEUED_COUNTDOWN.md  CHANGELOG_v0.0.20.153_AUDIO_EDITOR_RULER_SHORTCUTS.md  CHANGELOG_v0.0.20.154_CLIP_LAUNCHER_GRID_SHORTCUTS.md  CHANGELOG_v0.0.20.155_AUDIO_EDITOR_ARRANGER_PARITY.md  CHANGELOG_v0.0.20.157_CLIP_LAUNCHER_EDITOR_CLICK_LOOP_TILING.md  CHANGELOG_v0.0.20.158_AUDIO_EDITOR_PLAYHEAD_LOOP_LUPE.md  CHANGELOG_v0.0.20.160_LASSO_PER_EVENT_REVERSE.md  CHANGELOG_v0.0.20.163_AUDIO_EDITOR_REVERSE_CONTEXT.md  CHANGELOG_v0.0.20.164_AUDIO_CONSOLIDATE_BOUNCE.md  CHANGELOG_v0.0.20.165_ARRANGER_REVERSE_CONSOLIDATE_FIX.md  CHANGELOG_v0.0.20.166_AUDIO_EDITOR_REVERSE_CLIP_VS_EVENTS.md  CHANGELOG_v0.0.20.16_GPU_WAVEFORMS_TOGGLE.md  (+270 more)
pydaw_engine/: Cargo.toml  (+2 more)
(+962 files in other folders)
